<resources>
    <string name="app_name">BehtarinHotel</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_phone_main">PhoneMainActivity</string>
    <string name="title_activity_tablet_main">TabletMainActivity</string>
    <string name="text_location_property">Location Property</string>
    <string name="text_read_more">Read more</string>
    <string name="text_check_availability">Check avail.</string>
    <string name="text_price_from">Price from</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    
    <string name="title_activity_search">SearchActivity</string>
    <string name="text_where_search_activity">Where</string>
    <string name="text_check_in">Check in</string>
    <string name="text_check_out">Check out</string>
    <string name="text_room">Room(s)</string>
    <string name="text_adult">Adult</string>
    <string name="text_children">Children</string>
    <string name="text_search_for_hotels">Search for Hotels</string>
    <string name="title_activity_launcher">LauncherActivity</string>
    <string name="fragment_searchhotels">Search Hotels</string>
    <string name="fragment_availablehotels">Available hotels</string>
    <string name="fragment_checkavailablerooms">Check availability</string>
</resources>
